--- a/index.html
+++ b/index.html
@@ -294,7 +294,24 @@
         </div>
     </section>
     <section>
-        <h1>bye</h1>
+        <div>
+            <div class="text">
+                <div>
+                    <h1 class="title-pop">Apple Watch </h1>
+                    <h1 class="color-red">SERICE 7</h1>
+                    <h3 class="color-blue">buy now</h3>
+                </div>
+                <p>Starlight Aluminum Case with Sport Loop
+                    From $399 or $16.62/mo. per monthfor 24 mo.monthsFootnote*
+                    The aluminum case is lightweight and made from 100 percent recycled aerospace-grade alloy.
+                    The Sport Loop is made from a soft and breathable double-layer nylon weave, with a hook-and-loop
+                    fastener
+                    for quick and easy adjustment.</p>
+                <div>
+                    <div><img src="images/apple-watch-series-7.jpg" alt=""></div>
+                </div>
+            </div>
+        </div>
     </section>
     <section>
         <footer>
