--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     lighter in color than
                     the'titanium'coating of the X-T1</p>
                 <div class="button">
-                    <h3 class="button-text"><a href="">Preebook now <i class="fas fa-arrow-right"></i></a></h3>
+                    <h3 class="button-text">Preebook now <i class="fas fa-arrow-right"></i></a></h3>
                 </div>
             </div>
             <div class="image-pert">
@@ -73,7 +73,9 @@
                                         <i class="fas fa-star filled"></i>
                                         <i class="fas fa-star empty"></i>
                                     </div>
-                                    <p>4.99</p>
+                                    <div>
+                                        <h3>4.99</h3>
+                                    </div>
                                     <div>
                                         <p>Wordwide shifting available Buyers protection possible!</p>
                                     </div>
@@ -308,7 +310,7 @@
                     fastener
                     for quick and easy adjustment.</p>
                 <div>
-                    <div><img src="images/apple-watch-series-7.jpg" alt=""></div>
+                    <div class="apple"><img src="images/apple-watch-series-7.jpg" alt=""></div>
                 </div>
             </div>
         </div>
