--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <h3 class="button-text">Preebook now <i class="fas fa-arrow-right"></i></a></h3>
                 </div>
             </div>
-            <div class="image-pert">
+            <div class="image-part">
                 <img src="images/main-camera.png" alt="">
             </div>
         </div>
@@ -71,10 +71,7 @@
                                         <i class="fas fa-star filled"></i>
                                         <i class="fas fa-star filled"></i>
                                         <i class="fas fa-star filled"></i>
-                                        <i class="fas fa-star empty"></i>
-                                    </div>
-                                    <div>
-                                        <h3>4.99</h3>
+                                        <i class="fas fa-star empty"><span class="color-black">4.99</span></i>
                                     </div>
                                     <div>
                                         <p>Wordwide shifting available Buyers protection possible!</p>
@@ -99,9 +96,8 @@
                                         <i class="fas fa-star filled"></i>
                                         <i class="fas fa-star filled"></i>
                                         <i class="fas fa-star filled"></i>
-                                        <i class="fas fa-star empty"></i>
+                                        <i class="fas fa-star empty"><span class="color-black">4.99</span></i>
                                     </div>
-                                    <p>4.99</p>
                                     <div>
                                         <p>Wordwide shifting available Buyers protection possible!</p>
                                     </div>
@@ -124,9 +120,8 @@
                                         <i class="fas fa-star filled"></i>
                                         <i class="fas fa-star filled"></i>
                                         <i class="fas fa-star filled"></i>
-                                        <i class="fas fa-star empty"></i>
+                                        <i class="fas fa-star empty"><span class="color-black">4.99</span></i>
                                     </div>
-                                    <p>4.99</p>
                                     <div>
                                         <p>Wordwide shifting available Buyers protection possible!</p>
                                     </div>
@@ -149,9 +144,8 @@
                                         <i class="fas fa-star filled"></i>
                                         <i class="fas fa-star filled"></i>
                                         <i class="fas fa-star filled"></i>
-                                        <i class="fas fa-star empty"></i>
+                                        <i class="fas fa-star empty"><span class="color-black">4.99</span></i>
                                     </div>
-                                    <p>4.99</p>
                                     <div>
                                         <p>Wordwide shifting available Buyers protection possible!</p>
                                     </div>
@@ -174,9 +168,8 @@
                                         <i class="fas fa-star filled"></i>
                                         <i class="fas fa-star filled"></i>
                                         <i class="fas fa-star filled"></i>
-                                        <i class="fas fa-star empty"></i>
+                                        <i class="fas fa-star empty"><span class="color-black">4.99</span></i>
                                     </div>
-                                    <p>4.99</p>
                                     <div>
                                         <p>Wordwide shifting available Buyers protection possible!</p>
                                     </div>
@@ -199,9 +192,8 @@
                                         <i class="fas fa-star filled"></i>
                                         <i class="fas fa-star filled"></i>
                                         <i class="fas fa-star filled"></i>
-                                        <i class="fas fa-star empty"></i>
+                                        <i class="fas fa-star empty"><span class="color-black">4.99</span></i>
                                     </div>
-                                    <p>4.99</p>
                                     <div>
                                         <p>Wordwide shifting available Buyers protection possible!</p>
                                     </div>
@@ -224,9 +216,8 @@
                                         <i class="fas fa-star filled"></i>
                                         <i class="fas fa-star filled"></i>
                                         <i class="fas fa-star filled"></i>
-                                        <i class="fas fa-star empty"></i>
+                                        <i class="fas fa-star empty"><span class="color-black">4.99</span></i>
                                     </div>
-                                    <p>4.99</p>
                                     <div>
                                         <p>Wordwide shifting available Buyers protection possible!</p>
                                     </div>
@@ -249,9 +240,8 @@
                                         <i class="fas fa-star filled"></i>
                                         <i class="fas fa-star filled"></i>
                                         <i class="fas fa-star filled"></i>
-                                        <i class="fas fa-star empty"></i>
+                                        <i class="fas fa-star empty"><span class="color-black">4.99</span></i>
                                     </div>
-                                    <p>4.99</p>
                                     <div>
                                         <p>Wordwide shifting available
                                             Buyers protection possible!</p>
@@ -275,9 +265,8 @@
                                         <i class="fas fa-star filled"></i>
                                         <i class="fas fa-star filled"></i>
                                         <i class="fas fa-star filled"></i>
-                                        <i class="fas fa-star empty"></i>
+                                        <i class="fas fa-star empty"><span class="color-black">4.99</span></i>
                                     </div>
-                                    <p>4.99</p>
                                     <div>
                                         <p>Wordwide shifting available
                                             Buyers protection possible!</p>
@@ -295,7 +284,7 @@
             <p class="button-text-2">see more <i class="fas fa-arrow-right"></i></p>
         </div>
     </section>
-    <section>
+    <section class="all-apple">
         <div>
             <div class="text">
                 <div>
